[package]
name = "mehen-markdown"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — Markdown documentation metrics analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
# Required transitively by `num_derive::FromPrimitive` in `grammar.rs`
# — the derive expansion references `num_traits::FromPrimitive` by
# absolute path. Keep as a direct dependency and silence cargo-machete.
num-traits = { workspace = true }
# `regex`, `unicode-script`, and `unicode-segmentation` are pinned here
# (not in `[workspace.dependencies]`) because `mehen-markdown` is the
# only consumer — they back the prose-quality metric heuristics
# (sentence segmentation, script detection, identifier matching).
regex = "^1.7"
unicode-script = "^0.5"
unicode-segmentation = "^1.12"
serde = { workspace = true }
# `pulldown-cmark` is the Markdown parser backend. Default features are
# disabled because the analyzer consumes parser events and byte offsets
# directly; it never renders HTML.
pulldown-cmark = { version = "=0.13.4", default-features = false }

[dev-dependencies]
# Tests rely on `mehen-engine`'s `init_markdown` to register the
# embedded-code fence dispatch (the legacy pre-1.0 metric analyzer
# for Rust/Python/etc., now living under
# `mehen_engine::legacy::*`). Phase-6+ replaces this with the
# rewrite-plan §4.7 `LanguageDispatcher` once per-language analyzers
# reach parity.
mehen-engine = { workspace = true }

camino = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["num-traits"]

[lints]
workspace = true
