[package]
name = "mehen-php"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — PHP language analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
mago-syntax = { workspace = true }
mago-syntax-core = { workspace = true }
mago-database = { workspace = true }
mago-span = { workspace = true }
mago-php-version = { workspace = true }
bumpalo = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mehen-report = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
