[package]
name = "mehen-report"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — report rendering (JSON, GitHub Markdown, single-file Markdown) (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-engine = { workspace = true }
mehen-metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
