[package]
name = "mehen-report"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — report rendering (JSON, GitHub Markdown, single-file Markdown) (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-engine = { workspace = true }
mehen-metrics = { workspace = true }
mehen-markdown = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["docs-diff"]
# Enables the Markdown documentation-diff renderer ported from the
# pre-1.0 `src/diff_markdown.rs`. Off when the consumer doesn't want
# the `mehen-markdown` types in scope.
docs-diff = ["dep:mehen-markdown"]
