[package]
name = "mehen-ruby"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — Ruby language analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
# `ruby-prism` — replaces tree-sitter-ruby for this analyzer. Pinned
# here (not in `[workspace.dependencies]`) because `mehen-ruby` is the
# only consumer. Per the rewrite plan §6.5 we move to Ruby's canonical
# Prism parser so modifier forms (`x if y`, `expr rescue`), pattern
# matching (`case…in`), endless methods, safe navigation (`&.`),
# numbered block parameters, and all the Ruby-3-era syntax the
# tree-sitter grammar lags on become first-class.
#
# License audit (plan §6.5): `ruby-prism` (MIT, Ian Ker-Seymer / Steve
# Loveless / Kevin Newton), `ruby-prism-sys` (MIT), and the bundled
# upstream Prism C parser (MIT, Shopify Inc.) are all permissive — no
# copyleft conflict with mehen's licensing.
#
# Build prerequisites (plan §6.5 — "Windows CI/release jobs must
# install the required native toolchain"): `ruby-prism-sys` invokes
# `bindgen 0.72` unconditionally and compiles vendored Prism C via
# `cc`, so every release target needs `libclang` and a C toolchain
# at build time. Linux/macOS GitHub-hosted runners have these
# preinstalled; Windows runners need `LIBCLANG_PATH` (e.g.
# `choco install llvm`); musl builds need `clang-dev`. The release
# binary path means end users do not need any of this — only people
# building `mehen` from source.
ruby-prism = "=1.9.0"
smol_str = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mehen-report = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
