[package]
name = "mehen-typescript"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Mehen 1.0 — TypeScript / JavaScript / TSX / JSX analyzer (internal)."
publish = false

[dependencies]
mehen-core = { workspace = true }
mehen-metrics = { workspace = true }
# Oxc — replaces tree-sitter-typescript for the JS/TS/JSX/TSX analyzer.
# Pinned here (not in `[workspace.dependencies]`) because `mehen-typescript`
# is the only consumer. All Oxc crates ship in lockstep; mismatched
# versions panic at AST type level — bump them together.
oxc_allocator = "=0.133.0"
oxc_ast = "=0.133.0"
oxc_ast_visit = "=0.133.0"
oxc_parser = "=0.133.0"
oxc_span = "=0.133.0"
oxc_syntax = "=0.133.0"
smol_str = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
mehen-report = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
